--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,11 +19,15 @@
         ],
         "quotes": [
             "error",
-            "double"
+            "single"
         ],
         "semi": [
             "error",
             "always"
+        ],
+        "no-console": [
+          "warn",
+          { "allow": ["warn", "error"]}
         ]
     }
 }
