--- a/package.json
+++ b/package.json
@@ -4,5 +4,7 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.18.0",
     "babelify": "^7.3.0",
+    "jquery": "^3.1.1",
+    "vue": "^2.0.3"
   }
 }
