--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.18.0",
     "babelify": "^7.3.0",
+    "browserify": "^13.1.1",
     "jquery": "^3.1.1",
     "vue": "^2.0.3"
   }
