--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vueApp",
-  "main": "src/app.js",
+  "main": "src/main.js",
   "aliasify": {
     "aliases": {
       "$vue": "vue/dist/vue.js"
@@ -11,13 +11,16 @@
     "babel-preset-es2015": "^6.18.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.1",
+    "gulp": "^3.9.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^2.2.0",
     "jquery": "^3.1.1",
     "lodash": "^4.16.4",
     "uglifyjs": "^2.4.10",
-    "vue": "^2.0.3"
-  },
-  "scripts": {
-    "build": "browserify src/app.js -o > dist/vue-app.js -t [ babelify --presets [ es2015 ] ]",
-    "watch": "watchify src/app.js -o dist/vue-app.js"
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "vue": "^2.0.3",
+    "vue-resource": "^1.0.3",
+    "watchify": "^3.7.0"
   }
 }
