--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-sourcemaps": "^2.2.0",
     "jquery": "^3.1.1",
     "lodash": "^4.16.4",
+    "sass": "^0.5.0",
     "uglifyjs": "^2.4.10",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
