--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
   "name": "vueApp",
   "main": "src/main.js",
-  "aliasify": {
-    "aliases": {
-      "$vue": "vue/dist/vue.js"
-    }
-  },
   "devDependencies": {
     "aliasify": "^2.0.0",
+    "babel-core": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.1",
+    "eslint": "^3.9.1",
+    "eslint-config-vue": "^2.0.0",
+    "eslint-plugin-vue": "^1.0.0",
     "gulp": "^3.9.1",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^2.2.0",
     "jquery": "^3.1.1",
     "lodash": "^4.16.4",
-    "sass": "^0.5.0",
+    "node-sass": "^3.10.1",
     "uglifyjs": "^2.4.10",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "vue": "^2.0.3",
+    "vue-resource": "^1.0.3",
+    "vueify": "^9.2.4",
     "watchify": "^3.7.0"
   }
 }
