--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-core": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
     "babelify": "^7.3.0",
+    "bluebird": "^3.4.6",
     "browserify": "^13.1.1",
     "eslint": "^3.9.1",
     "eslint-config-vue": "^2.0.0",
